[r=blake-rouse][bug=1682174][author=ricgard] Resolves select all tick box for tables width fixed on mobile

--- a/src/maasserver/static/scss/_pages.scratch.scss
+++ b/src/maasserver/static/scss/_pages.scratch.scss
@@ -1,7 +1,10 @@
 @mixin maas-pages {
 
   table thead {
-    display: table-header-group !important;
+
+    @media screen and (min-width: $breakpoint-medium + 1) {
+      display: table-header-group !important;
+    }
   }
 
   table thead,
